objects/SFDC_Channel_Account_Plan__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Business_Challenges__c</fullName>
        <label>Business Challenges</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>My_Company_s_Channel_Plan__c</fullName>
        <description>Returns true when the current user's associated account is the same as for the channel plan. Used in Partner Central for list view visibility.</description>
        <formula>Partner_Account__r.Id =  $User.Account_Id_Formula__c</formula>
        <inlineHelpText>Returns true when the current user's associated account is the same as for the channel plan. Used in Partner Central for list view visibility.</inlineHelpText>
        <label>My Company's Channel Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Plans</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Account Plans</relationshipLabel>
        <relationshipName>ChannelAccountPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>High level, time bound plan outlining joint vision statements and a roadmap for success. Channel plans are created for vendors and partners.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Channel Plan</label><nameField>
        <label>Channel Plan Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Channel Plans</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>Active_Future_Channel_Plans</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Company_s_Channel_Plan__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planning,Pending,Approved,In Progress</value>
        </filters>
        <label>Active &amp; Future Channel Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Target__c</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Plans</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Target__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Plans_Company</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Company_s_Channel_Plan__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Company's Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews></CustomObject>